Finished writing the html contents

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
+
+
+
 <head>
 	<title>I'm Rishi Raj</title>
 	<link rel="icon" type="image/png" href="images/rr2.png">
@@ -8,12 +12,12 @@
 
 	<!--The width of the page will be the screen width of the device-->
 	<meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
-	
+
 
 	<!--Author name and details-->
 	<meta name="author" content="Rishi Raj" />
 	<meta name="description" content="I'm Rishi Raj, I am a mechnical engineering student at IIT-BHU. I'm a tech enthusiast and love to hear about all the things going around the world." />
- 
+
 
 	<!--FontAwesome icons-->
 	<script src="https://kit.fontawesome.com/a54f558e2d.js" crossorigin="anonymous"></script>
@@ -28,6 +32,9 @@
 	<!-- Google JQuery CDN-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
+	<!--My own JavaScript-->
+	<script src="js/latest.js"></script>
+
 </head>
 
 
@@ -39,19 +46,130 @@
 		<nav></nav>
 	</header>
 
-	<section>
+
+	<section class="Intro">
 		<img src="images/rishi.png">
 		<span>Hey, I'm</span>
 		<span>RISHI</span>
 		<span>RAJ</span>
 	</section>
 
-	
-	<section >
+
+	<section class="About me">
 		<h2>About me</h2>
-		<p> I am an engineering student, and an all-round web-developer. I do college projects, freelancing and sometimes write about these in my blog. I have a good knowledge of machine learning and currently doing some projects in it too. Also, I like working in a team, you'll learn faster and much more. As the saying goes : "two heads are better than one."
+		<p> I am an engineering student, and an all-round web-developer. I do college projects, freelancing and sometimes write about these in my blog. I have a good knowledge of machine learning and currently doing some projects in it too. I aldo like working in a team, you'll learn faster and much more. As the saying goes : "two heads are better than one."</p>
 	</section>
-	
+
+
+	<section class="Experiences">
+
+		<div>
+			<h2>Experiences</h2>
+			<p>"It's not the lawyer who knows the most law, but the one who best prepares his case, who wins."</p>
+			<span>- Napolean Hill, Think &amp; Grow Rich</span>
+		</div>
+
+		<span><h3>Educations</h3></span>
+
+		<div>
+			<h4>Indian Institute of Technology Varanasi (IIT-BHU)</h4>
+			<span>Jul 2018 - Current</span>
+			<h5>B.Tech + M.Tech- Mechanical Engineering</h5>
+			<span>Varanasi</span>
+		</div>
+
+		<div>
+			<h4>Manas International Public School</h4>
+			<span>May 2015 - Mar 2017</span>
+			<h5>Senior Secondary : Science</h5>
+			<span>Jehanabad</span>
+		</div>
+
+		<div>
+			<h4>DAV Public School</h4>
+			<span>Apr 2008 - Mar 2017</span>
+			<h5>High School</h5>
+			<span>Jehanabad</span>
+		</div>
+
+	</section>
+
+
+	<section class="Abilities">
+		<div>
+			<h2>Abilities</h2>
+			<p>"Be better than yesterday...If you can, try to be be better than half a day ago, even a minute ago!"</p>
+			<span>- Rock Lee </span>
+		</div>
+
+		<div class="Skills">
+			<h3>Skills</h3>
+			<ul>
+				<li>HTML(5)</li>
+				<li>CSS(3)</li>
+				<li>JavaScript</li>
+				<li>Bootstrap</li>
+				<li>jQuery</li>
+				<li>OOP</li>
+				<li>C++</li>
+				<li>Python</li>
+				<li>Machine Learning</li>
+			</ul>
+		</div>
+
+		<div class="Tools">
+			<h3>Tools</h3>
+			<ul>
+				<li>Matlab</li>
+				<li>Git</li>
+				<li>Github</li>
+				<li>MS Office</li>
+			</ul>
+		</div>
+
+	</section>
+
+
+	<section class="Projects">
+		<div>
+			<h2>Projects</h2>
+			<p>"Be not afraid of growing slowly, be afraid only of standing still"</p>
+		</div>
+	</section>
+
+
+	<section class='Art'>
+		<div>
+			<h2>Art</h2>
+			<p>"Its all about being able to bend things, most people see as straight lines."</p>
+		</div>
+	</section>
+
+
+	<section class="Contact">
+		<div>
+			<h2>Let's</h2>
+			<h2>Connect</h2>
+			<p>"If you don't like the hand that fate's dealt you with, fight for a new one."</p>
+			<span>- Naruto Uzumaki</span>
+		</div>
+
+		<div>
+			<p>Let's Connect. I prefer <a href="">LinkedIn messages</a> and <a href="">Twitter DMs.</a></p>
+		</div>
+	</section>
+
+
+
+
+
+
+
+
+
+
+
+
 
 	<!--Bootstrap core JavaScript-->
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
