Added all the images, links and icons

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 		<span>Hey, I'm</span>
 		<span>RISHI</span>
 		<span>RAJ</span>
+		<a href="https://twitter.com/irishirajj" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @_Raj_Rishi_</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	</section>
 
 
@@ -75,6 +76,7 @@
 			<h4>Indian Institute of Technology Varanasi (IIT-BHU)</h4>
 			<span>Jul 2018 - Current</span>
 			<h5>B.Tech + M.Tech- Mechanical Engineering</h5>
+			<i class="fas fa-map-marker-alt"></i>
 			<span>Varanasi</span>
 		</div>
 
@@ -82,6 +84,7 @@
 			<h4>Manas International Public School</h4>
 			<span>May 2015 - Mar 2017</span>
 			<h5>Senior Secondary : Science</h5>
+			<i class="fas fa-map-marker-alt"></i>
 			<span>Jehanabad</span>
 		</div>
 
@@ -89,6 +92,7 @@
 			<h4>DAV Public School</h4>
 			<span>Apr 2008 - Mar 2017</span>
 			<h5>High School</h5>
+			<i class="fas fa-map-marker-alt"></i>
 			<span>Jehanabad</span>
 		</div>
 
@@ -105,25 +109,168 @@
 		<div class="Skills">
 			<h3>Skills</h3>
 			<ul>
-				<li>HTML(5)</li>
-				<li>CSS(3)</li>
-				<li>JavaScript</li>
-				<li>Bootstrap</li>
-				<li>jQuery</li>
-				<li>OOP</li>
-				<li>C++</li>
-				<li>Python</li>
-				<li>Machine Learning</li>
+				<li>
+					<span class="ability-title">HTML(5)</span>
+					<span class="ability-score">
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+					</span>
+				</li>
+
+				<li>
+					<span class="ability-title">CSS(3)</span>
+					<span class="ability-score">
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+					</span>
+				</li>
+
+				<li>
+					<span class="ability-title">JavaScript</span>
+					<span class="ability-score">
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+					</span>
+				</li>
+
+				<li>
+					<span class="ability-title">Bootstrap</span>
+					<span class="ability-score">
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="far fa-star"></span>
+					</span>
+				</li>
+
+				<li>
+					<span class="ability-title">jQuery</span>
+					<span class="ability-score">
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="far fa-star"></span>
+					</span>
+				</li>
+
+				<li>
+					<span class="ability-title">OOP</span>
+					<span class="ability-score">
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="far fa-star"></span>
+						<span class="far fa-star"></span>
+					</span>
+				</li>
+
+				<li>
+					<span class="ability-title">C++</span>
+					<span class="ability-score">
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+					</span>
+				</li>
+
+				<li>
+					<span class="ability-title">Python</span>
+					<span class="ability-score">
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+					</span>
+				</li>
+
+				<li>
+					<span class="ability-title">Machine Learning</span>
+					<span class="ability-score">
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="far fa-star"></span>
+						<span class="far fa-star"></span>
+						<span class="far fa-star"></span>
+					</span>
+				</li>
+
+
 			</ul>
 		</div>
 
 		<div class="Tools">
 			<h3>Tools</h3>
 			<ul>
-				<li>Matlab</li>
-				<li>Git</li>
-				<li>Github</li>
-				<li>MS Office</li>
+
+				<li>
+					<span class="ability-title">Matlab</span>
+					<span class="ability-score">
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+					</span>
+				</li>
+
+				<li>
+					<span class="ability-title">Git</span>
+					<span class="ability-score">
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+					</span>
+				</li>
+
+				<li>
+					<span class="ability-title">Github</span>
+					<span class="ability-score">
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+					</span>
+				</li>
+
+				<li>
+					<span class="ability-title">MS Office</span>
+					<span class="ability-score">
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="far fa-star"></span>
+					</span>
+				</li>
+
+				<li>
+					<span class="ability-title">Atom Text</span>
+					<span class="ability-score">
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+					</span>
+				</li>
+
 			</ul>
 		</div>
 
@@ -143,6 +290,34 @@
 			<h2>Art</h2>
 			<p>"Its all about being able to bend things, most people see as straight lines."</p>
 		</div>
+		<div>
+			<figure>
+			  <img src="images/rishi_bahubali.jpg" alt="Angry Bahubali pic">
+			  <figcaption></figcaption>
+			</figure>
+			<figure>
+			  <img src="images/rishi_alone.png" alt="evening lake scene">
+			  <figcaption></figcaption>
+			</figure>
+			<figure>
+			  <img src="images/rishi_heart2.jpg" alt="Lovers under tree in the moonlight">
+			  <figcaption></figcaption>
+			</figure>
+			<figure>
+			  <img src="images/rishi_heart3.jpg" alt="Lovers under tree under starlit night">
+			  <figcaption></figcaption>
+			</figure>
+			<figure>
+			  <img src="images/rishi_maple.png" alt="deer in a mapple leaf">
+			  <figcaption></figcaption>
+			</figure>
+			<figure>
+			  <img src="images/rishi_hurt.png" alt="Thors hurt the one who give the roses">
+			  <figcaption>Thorns hurt the one who give the roses</figcaption>
+			</figure>
+
+
+		</div>
 	</section>
 
 
@@ -155,8 +330,47 @@
 		</div>
 
 		<div>
-			<p>Let's Connect. I prefer <a href="">LinkedIn messages</a> and <a href="">Twitter DMs.</a></p>
+			<p>Let's Connect. I prefer <a href="https://www.linkedin.com/in/irishirajj">LinkedIn messages</a> and <a href="https://twitter.com/irishirajj">Twitter DMs.</a></p>
 		</div>
+
+
+		<div>
+			<ul >
+				<li>
+					<a href="https://twitter.com/irishirajj" target="_blank">
+						<i class="fab fa-twitter-square"></i>
+						twitter.com/irishirajj
+					</a>
+				</li>
+
+				<li>
+					<a href="https://www.linkedin.com/in/irishirajj" target="_blank">
+						<i class="fab fa-linkedin"></i>
+						www.linkedin.com/in/irishirajj
+					</a>
+				</li>
+			</ul>
+		</div>
+
+
+		<div>
+			<ul >
+				<li>
+					<a href="mailto:rishiraj.mec18@gmail.com" target="_blank">
+						<i class="fas fa-envelope-square"></i>
+						rishiraj.mec18@gmail.com
+					</a>
+				</li>
+
+	<!--	<li>
+					<a href="https://www.linkedin.com/in/irishirajj" target="_blank">
+						<i class="fab fa-linkedin"></i>
+						www.linkedin.com/in/irishirajj
+					</a>
+				</li>-->
+			</ul>
+		</div>
+
 	</section>
 
 
