Fixed the navbar

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<script src="https://kit.fontawesome.com/a54f558e2d.js" crossorigin="anonymous"></script>
 
 	<!--Google Fonts and BootStrap Core CSS-->
-	<link href='https://fonts.googleapis.com/css?family=Chewy' rel='stylesheet'>
+	<link href='https://fonts.googleapis.com/css?family=Chewy|Josefin Sans' rel='stylesheet'>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 	<!--My own StyleSheet-->
@@ -42,8 +42,38 @@
 
 
 	<header>
-		<h1>Rishi Raj</h1>
-		<nav></nav>
+		<div class="myname">
+			<h1>Rishi Raj</h1>
+		</div>
+		<div class="navcontainer">
+			<nav class="navbar navbar-expand-md  navbar-light justify-content-end">
+    		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      		<span class="navbar-toggler-icon"></span>
+     		</button>
+      		<div class="collapse navbar-collapse flex-grow-0" id="collapsibleNavbar">
+    			<ul class="navbar-nav">
+    		  		<li class="nav-item">
+      	  				<a class="nav-link" href="#">Profile</a>
+      				</li>
+    		 		 <li class="nav-item">
+        				<a class="nav-link" href="#">Experiences</a>
+      				</li>
+					<li class="nav-item">
+      		 			<a class="nav-link" href="#">Abilities</a>
+    		 		 </li>
+					<li class="nav-item">
+      		  			<a class="nav-link" href="#">Projects</a>
+    		 		 </li>
+					<li class="nav-item">
+      		 			<a class="nav-link" href="#">Arts</a>
+    		 		 </li>
+					<li class="nav-item">
+      		 			<a class="nav-link" href="#">Contact</a>
+    				</li>
+  		 		</ul>
+			</div>
+			</nav>
+		</div>
 	</header>
 
 
@@ -58,7 +88,7 @@
 
 	<section class="About me">
 		<h2>About me</h2>
-		<p> I am an engineering student, and an all-round web-developer. I do college projects, freelancing and sometimes write about these in my blog. I have a good knowledge of machine learning and currently doing some projects in it too. I aldo like working in a team, you'll learn faster and much more. As the saying goes : "two heads are better than one."</p>
+		<p> I am an engineering student, and an all-round web-developer. I do college projects, freelancing and sometimes write about these in my blog. I have a good knowledge of machine learning and currently doing some projects in it too. I like working in a team, you'll learn faster and much more. As the saying goes : "two heads are better than one."</p>
 	</section>
 
 
@@ -142,38 +172,6 @@
 					</span>
 				</li>
 
-				<li>
-					<span class="ability-title">Bootstrap</span>
-					<span class="ability-score">
-						<span class="fas fa-star"></span>
-						<span class="fas fa-star"></span>
-						<span class="fas fa-star"></span>
-						<span class="fas fa-star"></span>
-						<span class="far fa-star"></span>
-					</span>
-				</li>
-
-				<li>
-					<span class="ability-title">jQuery</span>
-					<span class="ability-score">
-						<span class="fas fa-star"></span>
-						<span class="fas fa-star"></span>
-						<span class="fas fa-star"></span>
-						<span class="fas fa-star"></span>
-						<span class="far fa-star"></span>
-					</span>
-				</li>
-
-				<li>
-					<span class="ability-title">OOP</span>
-					<span class="ability-score">
-						<span class="fas fa-star"></span>
-						<span class="fas fa-star"></span>
-						<span class="fas fa-star"></span>
-						<span class="far fa-star"></span>
-						<span class="far fa-star"></span>
-					</span>
-				</li>
 
 				<li>
 					<span class="ability-title">C++</span>
@@ -186,6 +184,7 @@
 					</span>
 				</li>
 
+
 				<li>
 					<span class="ability-title">Python</span>
 					<span class="ability-score">
@@ -196,6 +195,43 @@
 						<span class="fas fa-star"></span>
 					</span>
 				</li>
+
+
+				<li>
+					<span class="ability-title">Bootstrap</span>
+					<span class="ability-score">
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="far fa-star"></span>
+					</span>
+				</li>
+
+
+				<li>
+					<span class="ability-title">jQuery</span>
+					<span class="ability-score">
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="far fa-star"></span>
+					</span>
+				</li>
+
+
+				<li>
+					<span class="ability-title">OOP</span>
+					<span class="ability-score">
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="far fa-star"></span>
+						<span class="far fa-star"></span>
+					</span>
+				</li>
+
 
 				<li>
 					<span class="ability-title">Machine Learning</span>
@@ -250,6 +286,18 @@
 				</li>
 
 				<li>
+					<span class="ability-title">Atom Text</span>
+					<span class="ability-score">
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+						<span class="fas fa-star"></span>
+					</span>
+				</li>
+
+
+				<li>
 					<span class="ability-title">MS Office</span>
 					<span class="ability-score">
 						<span class="fas fa-star"></span>
@@ -260,16 +308,6 @@
 					</span>
 				</li>
 
-				<li>
-					<span class="ability-title">Atom Text</span>
-					<span class="ability-score">
-						<span class="fas fa-star"></span>
-						<span class="fas fa-star"></span>
-						<span class="fas fa-star"></span>
-						<span class="fas fa-star"></span>
-						<span class="fas fa-star"></span>
-					</span>
-				</li>
 
 			</ul>
 		</div>
@@ -385,8 +423,8 @@
 
 
 
-	<!--Bootstrap core JavaScript-->
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<!--Bootstrap core JavaScript-->
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
