--- a/index.html
+++ b/index.html
@@ -26,14 +26,15 @@
 	<link href='https://fonts.googleapis.com/css?family=Chewy|Josefin Sans' rel='stylesheet'>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-	<!--My own StyleSheet-->
-	<link rel="stylesheet" type="text/css" href="css/latest.css">
 
 	<!-- Google JQuery CDN-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 	<!--My own JavaScript-->
 	<script src="js/latest.js"></script>
+
+	<!--My own StyleSheet-->
+	<link rel="stylesheet" type="text/css" href="css/latest.css">
 
 </head>
 
@@ -46,19 +47,19 @@
 			<h1>Rishi Raj</h1>
 		</div>
 		<div class="navcontainer">
-			<nav class="navbar navbar-expand-md  navbar-light justify-content-end">
-    		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-      		<span class="navbar-toggler-icon"></span>
-     		</button>
+			<nav class="navbar navbar-expand-md  navbar-dark justify-content-end">
+    			<button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      				<span class="navbar-toggler-icon "></span>
+     			</button>
       		<div class="collapse navbar-collapse flex-grow-0" id="collapsibleNavbar">
     			<ul class="navbar-nav">
     		  		<li class="nav-item">
       	  				<a class="nav-link" href="#">Profile</a>
       				</li>
     		 		 <li class="nav-item">
-        				<a class="nav-link" href="#">Experiences</a>
+        				<a class="nav-link" href="#">Education</a>
       				</li>
-					<li class="nav-item">
+					<li class="nav-item special-link">
       		 			<a class="nav-link" href="#">Abilities</a>
     		 		 </li>
 					<li class="nav-item">
@@ -120,7 +121,7 @@
 
 		<div>
 			<h4>DAV Public School</h4>
-			<span>Apr 2008 - Mar 2017</span>
+			<span>Apr 2008 - Mar 2015</span>
 			<h5>High School</h5>
 			<i class="fas fa-map-marker-alt"></i>
 			<span>Jehanabad</span>
