Styled Intro section

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 <body>
 
 
-	<header>
+	<header class="fixed-top" >
 		<div class="myname">
 			<h1>Rishi Raj</h1>
 		</div>
 		<div class="navcontainer">
-			<nav class="navbar navbar-expand-md  navbar-dark justify-content-end">
+			<nav class="navbar navbar-expand-md  navbar-dark justify-content-end ">
     			<button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       				<span class="navbar-toggler-icon "></span>
      			</button>
@@ -79,12 +79,15 @@
 
 
 	<section class="Intro">
-		<img src="images/rishi.png">
-		<span>Hey, I'm</span>
-		<span>RISHI</span>
-		<span>RAJ</span>
-		<a href="https://twitter.com/irishirajj" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @_Raj_Rishi_</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+		<img id="mypic"src="images/rishi.png">
+		<div class="Intro-text">
+			<span class="littlespan">Hey, I'm</span><br>
+			<span>RISHI</span><br>
+			<span>RAJ</span><br>
+			<a href="https://twitter.com/irishirajj" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @_Raj_Rishi_</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+		</div>
 	</section>
+
 
 
 	<section class="About me">
@@ -331,27 +334,27 @@
 		</div>
 		<div>
 			<figure>
-			  <img src="images/rishi_bahubali.jpg" alt="Angry Bahubali pic">
+			  <img class="gallery" src="images/rishi_bahubali.jpg" alt="Angry Bahubali pic">
 			  <figcaption></figcaption>
 			</figure>
 			<figure>
-			  <img src="images/rishi_alone.png" alt="evening lake scene">
+			  <img class="gallery" src="images/rishi_alone.png" alt="evening lake scene">
 			  <figcaption></figcaption>
 			</figure>
 			<figure>
-			  <img src="images/rishi_heart2.jpg" alt="Lovers under tree in the moonlight">
+			  <img class="gallery" src="images/rishi_heart2.jpg" alt="Lovers under tree in the moonlight">
 			  <figcaption></figcaption>
 			</figure>
 			<figure>
-			  <img src="images/rishi_heart3.jpg" alt="Lovers under tree under starlit night">
+			  <img class="gallery" src="images/rishi_heart3.jpg" alt="Lovers under tree under starlit night">
 			  <figcaption></figcaption>
 			</figure>
 			<figure>
-			  <img src="images/rishi_maple.png" alt="deer in a mapple leaf">
+			  <img class="gallery" src="images/rishi_maple.png" alt="deer in a mapple leaf">
 			  <figcaption></figcaption>
 			</figure>
 			<figure>
-			  <img src="images/rishi_hurt.png" alt="Thors hurt the one who give the roses">
+			  <img class="gallery" src="images/rishi_hurt.png" alt="Thors hurt the one who give the roses">
 			  <figcaption>Thorns hurt the one who give the roses</figcaption>
 			</figure>
 
