--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<script src="https://kit.fontawesome.com/a54f558e2d.js" crossorigin="anonymous"></script>
 
 	<!--Google Fonts and BootStrap Core CSS-->
-	<link href='https://fonts.googleapis.com/css?family=Chewy|Josefin Sans' rel='stylesheet'>
+	<link href='https://fonts.googleapis.com/css?family=Chewy|Merriweather Sans:800,900' rel='stylesheet'>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 
@@ -46,12 +46,15 @@
 		<div class="myname">
 			<h1>Rishi Raj</h1>
 		</div>
+		
 		<div class="navcontainer">
-			<nav class="navbar navbar-expand-md  navbar-dark justify-content-end">
-    			<button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+			<nav class="navbar navbar-expand-md  navbar-light">
+				<div class="navbutton">
+    			<button type="button" id="nav-toggle" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsibleNavbar">
       				<span class="navbar-toggler-icon "></span>
      			</button>
-      		<div class="collapse navbar-collapse flex-grow-0" id="collapsibleNavbar">
+     			</div>
+      		<div class="collapse navbar-collapse " id="collapsibleNavbar">
     			<ul class="navbar-nav">
     		  		<li class="nav-item">
       	  				<a class="nav-link" href="#">Profile</a>
@@ -75,21 +78,27 @@
 			</div>
 			</nav>
 		</div>
+	
 	</header>
 
 
 	<section class="Intro">
-		<img src="images/rishi.png">
-		<span>Hey, I'm</span>
-		<span>RISHI</span>
-		<span>RAJ</span>
-		<a href="https://twitter.com/irishirajj" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @_Raj_Rishi_</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-	</section>
+		<div class="mypic">
+			<img src="images/rishi.png">
+		</div>
+		<div class="tagline">
+			<span>Hey, I'm</span><br>
+			<span>RISHI</span><br>
+			<span>RAJ</span><br>
+
+			<a href="https://twitter.com/irishirajj" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @_Raj_Rishi_</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+		</div>
 
 
-	<section class="About me">
-		<h2>About me</h2>
-		<p> I am an engineering student, and an all-round web-developer. I do college projects, freelancing and sometimes write about these in my blog. I have a good knowledge of machine learning and currently doing some projects in it too. I like working in a team, you'll learn faster and much more. As the saying goes : "two heads are better than one."</p>
+		<div class="About me">
+			<h2>About me</h2>
+			<p> I am an engineering student, and an all-round web-developer. I do college projects, freelancing and sometimes write about these in my blog. I have a good knowledge of machine learning and currently doing some projects in it too. I like working in a team, you'll learn faster and much more. As the saying goes : "two heads are better than one."</p>
+		<div>
 	</section>
 
 
