--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<script src="https://kit.fontawesome.com/a54f558e2d.js" crossorigin="anonymous"></script>
 
 	<!--Google Fonts and BootStrap Core CSS-->
-	<link href='https://fonts.googleapis.com/css?family=Chewy|Josefin Sans|Merriweather Sans:800,900' rel='stylesheet'>
+	<link href='https://fonts.googleapis.com/css?family=Chewy%7CJosefin Sans%7CMerriweather Sans:800,900' rel='stylesheet'>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 
@@ -82,7 +82,7 @@
 		<div class="row justify-content-around">
 		<div class="align-self-center  ml-4 mx-md-0 col-5  col-md-4 c order-md-2 " id="pic">
 			<div class="filler">
-				<img class="rounded-circle"width="90%" height="80%" id="mypic"src="images/rishi.png">
+				<img class="rounded-circle" id="mypic" src="images/rishi.png" alt="Rishi standing in sunlight">
 			</div>
 		</div>
 		<div class="align-self-center   col-6 col-md-3 order-md-1" id="mytag">
@@ -90,7 +90,7 @@
 			<span class="littlespan">Hey, I'm</span><br>
 			<span>RISHI</span><br>
 			<span>RAJ</span><br><br>
-			<a href="https://twitter.com/irishirajj" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @_Raj_Rishi_</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+			<a href="https://twitter.com/irishirajj" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @_Raj_Rishi_</a><script async src="https://platform.twitter.com/widgets.js"></script>
 		</div>
 		<div class="align-self-center mt-5 mt-md-0 mx-5 ml-md-0 px-5 px-md-0 mr-md-4 col-12 col-md-4 order-md-3 " id="myintro">
 			<div id="myintrohead">
