--- a/index.html
+++ b/index.html
@@ -352,17 +352,17 @@
 		<hr>
 		<div class="row gallery-container justify-content-center ">
 
-			  <img class="gallery align-self-center col-xs-6 col-md-4 col-lg-3 my-3" src="images/rishi_bahubali.jpg" alt="Angry Bahubali pic">
+			  <img class="gallery align-self-center col-6 col-md-4 col-lg-3 my-3" src="images/rishi_bahubali.jpg" alt="Angry Bahubali pic">
 
-			  <img class="gallery align-self-center col-xs-6 col-md-4 col-lg-3 my-3" src="images/rishi_alone.png" alt="evening lake scene">
+			  <img class="gallery align-self-center col-6 col-md-4 col-lg-3 my-3" src="images/rishi_alone.png" alt="evening lake scene">
 
-			  <img class="gallery align-self-center col-xs-6 col-md-4 col-lg-3 my-3" src="images/rishi_heart2.jpg" alt="Lovers under tree in the moonlight">
+			  <img class="gallery align-self-center col-6 col-md-4 col-lg-3 my-3" src="images/rishi_heart2.jpg" alt="Lovers under tree in the moonlight">
 
-			  <img class="gallery align-self-center col-xs-6 col-md-4 col-lg-3 my-3" src="images/rishi_heart3.jpg" alt="Lovers under tree under starlit night">
+			  <img class="gallery align-self-center col-6 col-md-4 col-lg-3 my-3" src="images/rishi_heart3.jpg" alt="Lovers under tree under starlit night">
 
-			  <img class="gallery align-self-center col-xs-6 col-md-4 col-lg-3 my-3" src="images/rishi_maple.png" alt="deer in a mapple leaf">
+			  <img class="gallery align-self-center col-6 col-md-4 col-lg-3 my-3" src="images/rishi_maple.png" alt="deer in a mapple leaf">
 
-			  <img class="gallery align-self-center col-xs-6 col-md-4 col-lg-3 my-3" src="images/rishi_hurt.png" alt="Thors hurt the one who give the roses">
+			  <img class="gallery align-self-center col-6 col-md-4 col-lg-3 my-3" src="images/rishi_hurt.png" alt="Thors hurt the one who give the roses">
 
 
 
