--- a/index.html
+++ b/index.html
@@ -387,26 +387,26 @@
 		</div>
 
 
-		<div>
-			<ul >
-				<li>
+		<div class="ContactIcons" >
+			<ul class="ContactList" >
+				<li class="align-self-center col-6 col-md-4 col-lg-3 my-3">
 					<a href="https://twitter.com/irishirajj" target="_blank">
-						<i class="fab fa-twitter-square"></i>
-						twitter.com/irishirajj
+						<i class="fab fa-twitter-square fa-5x"></i>
+						<!--twitter.com/irishirajj-->
 					</a>
 				</li>
 
-				<li>
+				<li class="align-self-center col-6 col-md-4 col-lg-3 my-3">
 					<a href="https://www.linkedin.com/in/irishirajj" target="_blank">
-						<i class="fab fa-linkedin"></i>
-						www.linkedin.com/in/irishirajj
+						<i class="fab fa-linkedin fa-5x"></i>
+						<!--www.linkedin.com/in/irishirajj-->
 					</a>
 				</li>
 
-				<li>
+				<li class="align-self-center col-6 col-md-4 col-lg-3 my-3">
 					<a href="mailto:rishiraj.mec18@gmail.com" target="_blank">
-						<i class="fas fa-envelope-square"></i>
-						rishiraj.mec18@gmail.com
+						<i class="fas fa-envelope-square fa-5x"></i>
+						<!--rishiraj.mec18@gmail.com-->
 					</a>
 				</li>
 			</ul>
